Add contentDescription to capture button

--- a/inappcamera/src/main/res/layout/inappcamera_activity_camera.xml
+++ b/inappcamera/src/main/res/layout/inappcamera_activity_camera.xml
@@ -19,6 +19,7 @@
         style="@style/InAppCamera_CircleButton.Capture"
         android:layout_gravity="center_horizontal|bottom"
         android:src="@drawable/inappcamera_ic_camera_white"
-        android:onClick="onCaptureClick" />
+        android:onClick="onCaptureClick"
+        android:contentDescription="@string/inappcamera_capture" />
 
 </FrameLayout>
